--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tailwindcss/cli": "^4.1.11",
     "autoprefixer": "^10.4.21",
     "bcrypt": "^6.0.0",
+    "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "jsonwebtoken": "^9.0.2",
