--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@radix-ui/react-navigation-menu": "^1.2.13",
     "@radix-ui/react-slot": "^1.2.3",
     "@tailwindcss/cli": "^4.1.11",
+    "@tanstack/react-table": "^8.21.3",
     "autoprefixer": "^10.4.21",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
@@ -21,6 +22,7 @@
     "clsx": "^2.1.1",
     "cookie": "^1.0.2",
     "crypto": "^1.0.1",
+    "jquery": "^3.7.1",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.525.0",
     "mysql2": "^3.14.2",
