--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "next": "15.3.5",
     "next-auth": "^4.24.11",
     "react": "^19.0.0",
+    "react-calendar": "^6.0.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.3.1",
     "uuid": "^11.1.0"
