--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "react-calendar": "^6.0.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.3.1",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "zustand": "^5.0.7"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
