--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "clsx": "^2.1.1",
     "cookie": "^1.0.2",
     "crypto": "^1.0.1",
+    "flowbite-datepicker": "^1.3.2",
     "jquery": "^3.7.1",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.525.0",
@@ -30,6 +31,7 @@
     "next-auth": "^4.24.11",
     "react": "^19.0.0",
     "react-calendar": "^6.0.0",
+    "react-datetime": "^3.3.1",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.3.1",
     "uuid": "^11.1.0",
