--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mantine/core": "^8.3.1",
+    "@mantine/hooks": "^8.3.1",
     "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
@@ -24,6 +26,7 @@
     "cookie": "^1.0.2",
     "crypto": "^1.0.1",
     "flowbite-datepicker": "^1.3.2",
+    "fuse.js": "^7.1.0",
     "jquery": "^3.7.1",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.525.0",
